# everyBotReference

./: .gitignore  .gitlab-ci-disabled.yml
Lighting/: Lighting.h
PacBot/: .gitignore  build.gradle  team_num.bat
PacBot/config/9018_TestBed/: RobotControl.xml
PacBot/config/Kris/: ClosedLoop.xml  (+2 more)
PacBot/include/: RobotMain.h
PacBot/src/: RobotMain.cpp
RobonautsControls/src/: ArcadeDriveControl.cpp  CameraServerControl.cpp  CompressorControl.cpp  ControlFactory.cpp  ControlThread.cpp  FlightBase.cpp  GameDataControl.cpp  KiwiDriveControl.cpp  MotorControl.cpp  PacbotBase.cpp  PeriodicControl.cpp  PositionJointSRX.cpp  RelayControl.cpp  ServoControl.cpp  SimpleCameraServer.cpp  SolenoidControl.cpp  TurretControl.cpp  VelocityJointSRX.cpp
RobonautsLibrary/: CMakeLists.txt
RobonautsLibrary/include/RobonautsLibrary/: ADIS16448_IMU.h  BPid.h  CartTrajectory.h  DataLogger.h  JevoisComm.h  LinesPointsMath.h  Macro.h  MacroController.h  MacroStep.h  MacroStepFactory.h  MultiSpeedTrajectory.h  OIController.h  OIDevice.h  OIDriverStation.h  OIGenericHID.h  OIJoystick.h  OIObserver.h  RAbsPosSensor.h  RAnalogIrSensor.h  RCounter.h  RDblSolenoid.h  RDigitalInput.h  RGyro.h  RPot.h  RSerialPort.h  RSpeedController.h  RSpeedControllerPwm.h  RSpeedControllerSparkMaxCan.h  RSpeedControllerTalonFXCan.h  RSpeedControllerTalonSRXCan.h  RSpeedControllerVictorSpxCan.h  RSpiGyro.h  RobotUtil.h  ScaledAnalog.h  SimplePID.h  SimpleTrapCntl.h  XmlRobotUtil.h
RobonautsLibrary/src/: ADIS16448_IMU.cpp  BPid.cpp  CartTrajectory.cpp  DataLogger.cpp  JevoisComm.cpp  LinesPointsMath.cpp  Macro.cpp  MacroController.cpp  MacroStep.cpp  MacroStepFactory.cpp  MultiSpeedTrajectory.cpp  OIController.cpp  OICypress.cpp  OIDevice.cpp  OIDriverStation.cpp  OIGenericHID.cpp  OIJoystick.cpp  OIObserver.cpp  RAbsPosSensor.cpp  RAnalogIrSensor.cpp  RCounter.cpp  RDblSolenoid.cpp  RDigitalInput.cpp  RGyro.cpp  RPot.cpp  RSerialPort.cpp  RSpeedController.cpp  RSpeedControllerPwm.cpp  RSpeedControllerSparkMaxCan.cpp  RSpeedControllerTalonFXCan.cpp  RSpeedControllerTalonSRXCan.cpp  RSpeedControllerVictorSPXCan.cpp  RSpiGyro.cpp  RobotUtil.cpp  ScaledAnalog.cpp  SimplePID.cpp  SimpleTrapCntl.cpp  XmlRobotUtil.cpp
gsi/: CMakeLists.txt
gsi/include/gsi/: Exception.h  Mutex.h  Network.h  Path.h  PeriodicThread.h  Semaphore.h  Socket.h  Thread.h  Time.h  Timer.h
gsi/src/: Exception.cpp  Mutex.cpp  Network.cpp  Path.cpp  PeriodicThread.cpp  Semaphore.cpp  Socket.cpp  Thread.cpp  Time.cpp  Timer.cpp
gsu/: CMakeLists.txt
gsu/include/gsu/: Advisory.h  AdvisoryFile.h  AdvisoryStdErr.h  AdvisoryStdOut.h  Angles.h  BuildVersion.h  Config.h  Crc16.h  File.h  Parameter.h  ParameterFile.h  PathUtil.h  PiecewiseLinear.h  Polynomial.h  SegmentedFile.h  Spline.h  SubscriptionStore.h  tinyxml2.h
gsu/src/: Advisory.cpp  AdvisoryFile.cpp  AdvisoryStdErr.cpp  AdvisoryStdOut.cpp  BuildVersion.cpp  Config.cpp  Crc16.cpp  File.cpp  Parameter.cpp  ParameterFile.cpp  PathUtil.cpp  PiecewiseLinear.cpp  Polynomial.cpp  SegmentedFile.cpp  Spline.cpp  SubscriptionStore.cpp  tinyxml2.cpp
(+38 files in other folders)
